# trade

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: ci.yml
data/: README.txt
data/cut-odtd/: fields_description.txt
etc/: README.txt  ctp.ini  cut.ini  trade.ini
include/: AppBase.hpp  info.h  info.h.ini  visibility.h
include/auxiliaries/mds/: OSTMdServer.h
include/auxiliaries/offline_booker/: OfflineBooker.h
include/auxiliaries/raw_md_recorder/: RawMdRecorder.h
include/auxiliaries/seq_checker/: SeqChecker.h
include/auxiliaries/sub_reporter_client/: SubReporterClient.h  SubReporterClientImpl.hpp
include/libbooker/: Booker.h  BookerCommonData.h  CallAuctionHolder.h  MdValidator.h  OrderWrapper.h  Rearranger.h
include/libbroker/: BrokerProxy.h  BrokerProxy.hpp  CTPBroker.h  CUTBroker.h  IBroker.h
include/libbroker/CTPImpl/: CTPCommonData.h  CTPMdImpl.h  CTPTraderImpl.h
include/libbroker/CUTImpl/: CUTCommonData.h  CUTMdImpl.h  CUTTraderImpl.h  OrderWrapper.h  RawStructure.h  SSEHpfTick.lua  SZSEHpfTick.lua
include/libholder/: IHolder.h  SQLLiteHolder.h  SQLiteHolder.h
include/libreporter/: AsyncReporter.h  CSVReporter.h  IReporter.hpp  LogReporter.h  MySQLReporter.h  NopReporter.hpp  ShmReporter.h  SubReporter.h
include/mds/: OSTMdServer.h
include/raw_md_recorder/: RawMdRecorder.h
include/third/ctp/: README.txt
include/third/cut/: UTApi.h  UTApiDataType.h  UTApiStruct.h
include/trade/: trade.h
include/utilities/: AddressHelper.hpp  ConfigHelper.hpp  GB2312ToUTF8.hpp  LoginSyncer.hpp  MakeAssignable.hpp  NetworkHelper.hpp  ProtobufDispatcher.hpp  README.txt  SeqChecker.hpp  Serializer.hpp  SnowFlaker.hpp  TickerTaper.hpp  TimeHelper.h  TimeHelper.hpp  ToJSON.hpp  UdpPayLoadGetter.hpp  UdpPayloadGetter.hpp
python/trade/: __init__.py  _trade.cpp
src/auxiliaries/mds/: OSTMdServer.cpp  main.cpp
src/auxiliaries/offline_booker/: CMakeLists.txt  OfflineBooker.cpp  main.cpp
src/auxiliaries/raw_md_recorder/: CMakeLists.txt  RawMdRecorder.cpp  main.cpp
src/auxiliaries/scripts/: hist_to_std_tick.py  l2_snap_dump.sh  raw_to_std_tick.py  sse_l2_snap_dump.sh  sse_tick_dump.sh  szse_l2_snap_dump.sh  szse_tick_dump.sh  tick_dump.sh  traded_volume_from_l2_snap.py  traded_volume_from_wind.py  volume_checker.py
src/auxiliaries/seq_checker/: CMakeLists.txt  SeqChecker.cpp  main.cpp
src/auxiliaries/sub_reporter_client/: CMakeLists.txt  SubReporterClient.cpp  main.cpp
src/libbooker/: Booker.cpp  BookerCommonData.cpp  CMakeLists.txt  CallAuctionHolder.cpp  MdValidator.cpp  OrderWrapper.cpp  Rearranger.cpp
src/libbroker/: BrokerProxy.cpp  CMakeLists.txt  CTPBroker.cpp  CUTBroker.cpp
src/libbroker/CTPImpl/: CTPCommonData.cpp  CTPMdImpl.cpp  CTPTraderImpl.cpp
src/libbroker/CUTImpl/: CUTCommonData.cpp  CUTMdImpl.cpp  CUTTraderImpl.cpp  OrderWrapper.cpp
src/libholder/: CMakeLists.txt  SQLLiteHolder.cpp  SQLiteHolder.cpp
src/libreporter/: AsyncReporter.cpp  CMakeLists.txt  CSVReporter.cpp  LogReporter.cpp  MySQLReporter.cpp  ShmReporter.cpp  SubReporter.cpp
src/mds/: CMakeLists.txt  OSTMdServer.cpp  main.cpp
src/raw_md_recorder/: CMakeLists.txt  RawMdRecorder.cpp  main.cpp
src/trade/: CMakeLists.txt  main.cpp  trade.cpp
src/trade-gui/: CMakeLists.txt  HomeWidget.cpp  HomeWidget.h  home_widget.ui  main.cpp  widget.cpp  widget.h
tests/: AddressHelperTest.cpp  AsyncReporterTest.cpp  BookerTest.cpp  CMakeLists.txt  CallAuctionHolderTest.cpp  LoginSyncerTest.cpp  MakeAssignableTest.cpp  MdValidatorTest.cpp  NetworkHelperTest.cpp  RearrangerTest.cpp  SQLiteHolderTest.cpp  SeqCheckerTest.cpp  SerializerTest.cpp  ShmReporterTest.cpp  SnowFlaker.cpp  SubReporterTest.cpp  TickerTaperTest.cpp  TimeHelperTest.cpp  UdpPayloadGetterTest.cpp  tests.cpp
tests/python/: test_python_bindings.py
tests/utilities/: OrderCreator.hpp  TickCreator.hpp
trade_types/: CMakeLists.txt  base.proto  enums.proto  networks.proto  orms.proto
