# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "scikit-build",
    "cmake>=3.9",
    "pybind11[global]==2.10.4",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for trade's version
[project]
name = "trade"
version = "0.0.1"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "Trade", email = "your@email.com" },
]
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = []

# NB: Setuptools-specific build options are currently still stored
#     in setup.py, as scikit-build is not (yet) supporting PEP621.
#     Later on, these will be stored in [tool.setuptools]

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = ["tests/python"]

